automation/k8s/minio/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-nodeport
  labels:
    app: minio
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30900
      name: api
    - port: 9001
      targetPort: 9001
      nodePort: 30901
      name: console
